tests/baselines/reference/reachabilityChecks5(strict=true).errors.txt
reachabilityChecks5.ts(1,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(5,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(5,17): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(11,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(18,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(18,17): error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
reachabilityChecks5.ts(24,16): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(30,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(30,17): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(40,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(40,17): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(51,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(51,17): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(65,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(79,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(79,17): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(85,13): error TS7027: Unreachable code detected.
reachabilityChecks5.ts(93,13): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(93,17): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(96,13): error TS7027: Unreachable code detected.
reachabilityChecks5.ts(104,14): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(115,14): error TS7006: Parameter 'x' implicitly has an 'any' type.
reachabilityChecks5.ts(115,18): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
reachabilityChecks5.ts(122,13): error TS7027: Unreachable code detected.


==== reachabilityChecks5.ts (24 errors) ====
    function f0(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (true);
    }
    
    function f1(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        if (x) {
            return 1
        }
    }
    
    function f2(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (x) {
            throw new Error();
        }
        return 1;
    }
    
    function f3(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
        while (x) {
            throw new Error();
        }
    }
    
    function f3_1 (x): number {
                   ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (x) {
        }
        throw new Error();
    }
    
    function f4(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        try {
            if (x) {
                return 1;
            }
        }
        catch (e) {
        }
    }
    
    function f5(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        try {
            if (x) {
                return 1;
            }
        }
        catch (e) {
            return 2;
        }
    }
    
    function f6(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        try {
            if (x) {
                return 1;
            }
            else 
            {
                throw new Error();
            }
        }
        catch (e) {
        }
    }
    
    function f7(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
            if (x) {
                return 1;
            }
            else {
                throw new Error();
            }
        }
        catch (e) {
            return 1;
        }
    }
    
    function f8(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        try {
            if (true) {
                x++;
            }
            else {
                return 1;
                ~~~~~~~~~
!!! error TS7027: Unreachable code detected.
            }
        }
        catch (e) {
            return 1;
        }
    }
    
    function f9(x): number {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                    ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        try {
            while (false) {
                return 1;
                ~~~~~~~~~
!!! error TS7027: Unreachable code detected.
            }
        }
        catch (e) {
            return 1;
        }
    }
    
    function f10(x): number {
                 ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
            do {
                x++;
            } while (true);
        }
        catch (e) {
            return 1;
        }
    }
    
    function f11(x): number {
                 ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                     ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        test:
        try {
            do {
                do {
                    break test;
                } while (true);
                x++;
                ~~~~
!!! error TS7027: Unreachable code detected.
            } while (true);
        }
        catch (e) {
            return 1;
        }
    }